<resources>
    <string name="app_name">یارباکس</string>

    <string name="yarbax">یارباکس</string>
    <string name="action_settings">Settings</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="put_your_name">نام خود را وارد نمایید</string>
    <string name="put_your_last_name">نام خانوادگی خود را وارد نمایید</string>
    <string name="put_your_number">شماره تلفن همراه خود را وارد نمایید</string>
    <string name="rules_agree">من <u><font fgcolor='#01C6DB'>  قوانین و مقررات یارباکس  </font></u>  را قبول دارم</string>
    <string name="login_yarbax">ورود به یار باکس</string>
    <string name="not_reg">هنوز ثبت نام نکرده اید؟ <font color="#305285" >ثبت نام</font></string>
    <string name="put_conf_code">کد تایید را وارد نمایید</string>
    <string name="conf_code">کد تایید</string>
    <string name="conf">تایید</string>
    <string name="resend_code">ارسال مجدد کد</string>
    <string name="rules">قوانین و مقررات</string>
    <string name="orders">مدیریت سفارشات</string>
    <string name="proc_orders">سفارشات در حال انجام</string>
    <string name="profile">پروفایل</string>
    <string name="personal_information"> مشخصات فردی</string>
    <string name="vehicle_information"> مشخصات وسیله</string>
    <string name="name"><font fgcolor="#FF4081"> ☻ </font> نام</string>
    <string name="lastname"><font fgcolor="#FF4081"> ☻ </font> نام خانوادکی</string>
    <string name="melicode"><font fgcolor="#FF4081"> ☻ </font> کد ملی</string>
    <string name="phonenumber"><font fgcolor="#FF4081"> ☻ </font> شماره موبایل</string>
    <string name="email"><font fgcolor="#FF4081"> ☻ </font> ایمیل</string>
    <string name="vehicletype"><font fgcolor="#FF4081"> ☻ </font> نوع وسیله</string>
    <string name="vehiclenumber"><font fgcolor="#FF4081"> ☻ </font> شماره پلاک</string>
    <string name="vehiclecolor"><font fgcolor="#FF4081"> ☻ </font> رنگ وسیله</string>
    <string name="model"> <font fgcolor="#FF4081"> ☻ </font>  مدل وسیله </string>
    <string name="inbox">صندوق پیام</string>
    <string name="general">عمومی</string>
    <string name="accept_pack">تایید مرسوله</string>
    <string name="user_accept">دریافت از مشتری</string>
    <string name="please_take_photo">لطفا از مرسوله خود عکس بگیرید</string>
    <string name="share_text">
        "
یارباکس را به دوستان و آشنایان خود معرفی کنید تا اعتباررایگان هدیه بگیرند و شماهم بعد از اولین سفارش آنها ۵ هزار تومان اعتبار دریافت کنید.

        "
    </string>
    <string name="priv8">خصوصی</string>
    <string name="faq">
        "<font fgcolor="#FF4081">۱- اپلیکیشن یارباکس چگونه کار می کند؟
        </font>
اپلیکیشن یارباکس به منظور درخواست آنلاین و بی واسطه پیک موتوری، تاکسی موتور، وانت بار و سواری طراحی شده است. کاربران می توانند با انتخاب مبدا و یک مقصد از هزینه ارسال مطلع شده و با فشردن دکمه «ارسال درخواست» سفارش خود را ثبت کنند.
        <font fgcolor="#FF4081">
۲- انتخاب آدرس مبدا چگونه است ؟
</font>
درخواست جدید را بزنید و درون نقشه ای که برای شما باز می شود، منطقه مورد نظر خود را انتخاب کنید و با قرار دادن نشانگر سرخابی رنگ برروی محل مورد نظر خود، آدرس مبدا را انتخاب کنید. بعد از ثبت مبدا می توانید توضیحات و آدرس دقیق و شماره تلفن مبدا را کامل کنید.
    <font fgcolor="#FF4081"> 
۳- چطور می توانم آدرس های درخواست خود را تغییر دهم؟
    </font>
برای این کار، کافی است درقسمت منو سمت راست رفته و آدرس های منتخب را زده و علامت سه نقطه را کلیک کرده و ویرایش خود را انجام دهید.
    <font fgcolor="#FF4081">
۴- چطور می توانم آدرس منتخب ثبت کنم؟
    </font>
از منوی اپلیکیشن، «آدرس های منتخب» را انتخاب کرده و در صفحه ای که برای شما باز می شود بر روی دکمه «افزودن آدرس جدید» ضربه بزنید و برروی نقشه آدرس مورد نظر خود را پیدا کرده و تایید نمایید.
    <font fgcolor="#FF4081">
۵- چطور می توانم سفارشم را لغو کنم ؟
    </font>
در صفحه مربوط به درخواست شما در اپلیکیشن نشانگری برای حذف یا لغو کردن درخواست داده شده وجود دارد. با ضربه زدن برروی این نشانگر شما می توانید سفارش خود را لغو کنید. لازم به ذکراست، امکان لغو درخواست تا قبل از رسیدن سفیر به مبدا امکان پذیر است.
        "
    </string>
    <string name="aboutus_text">"
مجموعه ی یارباکس با تکیه بر تجربه ی 15 ساله ی خود در زمینه ی حمل و نقل بین شهری خرده بار این بار با همراهی متخصصین لجستیک و نخبگان فناوری اطلاعات توانسته است در جهت هوشمند سازی فرآیندهای درخواست، حمل و تحویل مرسولات گامی موثر برداشته و با طراحی و پیاده سازی اولین سامانه آنلاین خدمات حمل و نقل بین شهری به افزایش کیفیت زندگی مردمان سرزمینمان کمک کند.
        "
    </string>
    <string name="rules_text">"ضوابط و مقررات مربوط به سفیران
سفیرانی که قصد فعالیت در سیستم کاری یارباکس را دارند ، لازم است متن قوانین و مقررات را به طور کامل مطالعه و سپس اقدام به عضویت نمایند . ورود سفیران به اپلیکیشن یارباکس و اقدام به فعالیت و ارائه خدمات به کاربران و مشتریان یارباکس ، به معنای آگاه بودن از شرایط و قوانین و پذیرفتن آن ها است.
کلیه اصول و رویه‏‌های یارباکس منطبق با قوانین و مقررات جمهوری اسلامی ایران ، قانون تجارت الکترونیک و قانون حمایت از حقوق مصرف کنندگان است. توجه داشته باشید قوانین مندرج در این صفحه در طول زمان قابل تغییر است و اطلاع رسانی در صورت بروزآوری، این تغییرات در همین صفحه به روز رسانی می شود از این رو، مسئولیت مطالعه و آگاهی از این تغییرات بر عهده کاربر است.
ماده یک : شرایط عمومی عضویت دریارباکس
•	اشخاص با داشتن حداقل سن 18 سال تمام شمسی
•	دارا بودن گواهینامه معتبر رانندگی موتورسیکلت و خودرو
•	دارا بودن یک دستگاه موتور سیکلت یا خودرو با مشخصات فنی سالم.
•	معاینه فنی خودرو ها
•	ایمان و اعتقاد عقلی و عملی به نظام جمهوری اسلامی ایران
•	تابعیت ایرانی
•	عدم اشتهار به فساد اخلاقی
•	عدم اعتیاد به هرگونه مواد مخدر و افیونی
•	عدم ممنوعیت قانونی و عدم حجر (داشتن سلامت عقلی)
•	تهیه سوء پیشینه
•	درخواست کتبی عضویت
•	گذراندن دوره ارتباط با نرم افزار یارباکس و تاییدیه شرکت
•	دارا بودن یک دستگاه تلفن همراه مجهز به سیستم عامل اندروید 4 به بالا و دسترسی به اینترنت پر سرعت همراه
•	دارا بودن حساب بانکی در یکی از بانک های فعال ایرانی مجاز در داخل کشور
ماده دو: مدارک مورد نیاز
•	اصل گواهینامه معتبر رانندگی
•	2 قطعه عکس
•	اصل شناسنامه
•	اصل کارت ملی
•	تاییدیه گذراندن دوره آشنایی با نرم افزار یارباکس
•	اصل بیمه نامه معتبرشخص ثالث وسیله نقلیه
•	سند مالکیت وسیله نقلیه
•	سند و یا اجاره نامه محل اقامت به همراه یک نسخه قبض خدماتی
•	ارائه شماره شبای حساب بانکی
•	برگ سفته معادل مبلغ پنجاه میلیون تومان برای موتور سواران و دارندگان وسیله نقلیه سواری و برگ سفته معادل مبلغ صد میلیون تومان برای دارندگان وسیله نقلیه وانت جهت ضمانت حسن انجام کار
تبصره: کلیه اسناد موضوع این ماده ( به استثنای سفته موضوع ضمانت حسن انجام کار فوق الذکر و نیز یکی از اصل مدارک شناسایی شامل کارت ملی ، شناسنامه ، کارت پایان خدمت و گذرنامه ) پس از طی تشریفات عضویت ، به صاحبان آن عودت میگردد.
ماده سه: تعهدات سفیران در برابر شرکت و اشخاص ثالث
•	کد عضویت دریافتی به منزله رمز شخصی سفیر است؛ نامبرده متعهد میگردد کد عضویت دریافتی از شرکت را تحت هیچ عنوان در اختیار اشخاص ثالث ولو اعضای شرکت ، قرار نداده و در حفظ آن کوشش نماید، بدیهی است انجام این عمل و نتیجتا تبعات و مسئولیت عواقب آن بر عهده شخص سفیر و شخص دریافت کننده می باشد.
•	سفیر متعهد میگردد در اسرع وقت خود را به محل مبداء رسانیده و با دریافت مرسوله و بار، مرسوله را ( داخل باکس های مخصوص شرکت در صورت حمل بار توسط موتور سیکلت قرار داده ) و در کوتاه ترین زمان ممکن با رعایت نکات ایمنی به محل مقصد برساند.
•	در صورت انتقال وسیله ( فیزیکی یا اسنادی ) راننده موظف به اطلاع رسانی می باشد.
•	در صورت انتقال خط تلفن راننده موظف به اطلاع رسانی می باشد.

"
</string>
</resources>
