<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f7f8f8"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/verify"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:background="@drawable/reg_box_curve"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="100">
                    <app.yarbax.com.MyViews.SigninEdittext
                        android:id="@+id/app_code"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="85"
                        android:background="#ebeced"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/edittext_size"
                        android:hint="@string/put_conf_code"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/app_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/btn_curve"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    />

                <TextView
                    android:id="@+id/app_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_code"
                    android:textSize="@dimen/edittext_size"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="80dp"
                    android:textColor="#305285"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>