<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#f7f8f8"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#525352"
            android:padding="5dp"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_yarbax"
                android:textColor="@android:color/white"
                android:textSize="@dimen/header_text_size"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_margin="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:background="@drawable/reg_box_curve"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="100">
                    <app.yarbax.com.MyViews.SigninEdittext
                        android:id="@+id/login_phone"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="100"
                        android:inputType="number"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:maxLength="11"
                        android:textSize="@dimen/edittext_size"
                        android:hint="@string/put_your_number"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/login_notreg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_reg"
                    android:textSize="@dimen/edittext_size"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#305285"/>
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="دریافت کد تایید"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/btn_curve"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>