<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f7f8f8"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#525352"
            android:weightSum="10"
            android:padding="5dp"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:layout_weight="6"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/header_text_size"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.8"
                android:layout_margin="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5.5"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:background="@drawable/reg_box_curve"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="100"
                    android:background="@drawable/reg_box_curve">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_weight="15"
                        android:layout_gravity="center"
                        android:src="@mipmap/regname"/>
                    <EditText
                        android:id="@+id/reg_name"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="85"
                        android:background="#ebeced"
                        android:textSize="@dimen/edittext_size"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/put_your_name"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:weightSum="100"
                    android:background="@drawable/reg_box_curve">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_weight="15"
                        android:layout_gravity="center"
                        android:src="@mipmap/regname"/>
                    <EditText
                        android:id="@+id/reg_last"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="85"
                        android:background="#ebeced"
                        android:textSize="@dimen/edittext_size"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/put_your_last_name"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="100"
                    android:background="@drawable/reg_box_curve">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:layout_weight="15"
                        android:layout_gravity="center"
                        android:src="@mipmap/regtel"/>
                    <EditText
                        android:id="@+id/reg_phone"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="85"
                        android:background="#ebeced"
                        android:inputType="number"
                        android:textSize="@dimen/edittext_size"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/put_your_number"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/btn_curve"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</FrameLayout>